--- a/index.html
+++ b/index.html
@@ -1,3 +1,19 @@
 <html>
-<h1>tiny testimonies</h1>
+    <head>
+        <link rel="stylesheet" href="assets/stylesheets/tt_styles.css">
+    </head>
+    <body>
+        <br>
+        <div id="header">
+            <h1>
+                tiny testimonies
+            </h1>
+        </div>
+        <div class="nav">
+        </div>
+        <p>
+            Tiny Testimonies is a 
+        </p>
+    </body>
+            
 <html>
