--- a/about/index.html
+++ b/about/index.html
@@ -44,7 +44,8 @@
                     </h1>
                     <h2 class="headline">
                     Dec 1, 2017
-                        
+                    · 5 words
+                    · 1 minute read 
                       <span class="tags">
                       
                       </span>
